1999-03-08  Stefan Monnier  <monnier@cs.yale.edu>

	* opt/split.sml (sexp): don't split HANDLE (it's incorrect).
	(funeffect): embryo to detect side-effect free APPs (non-functional).
	(splitThreshold): to put a cap on inlining.
	(stfn): don't bother splitting inlinable TFNs.

	* main/control.sml (splitThreshold): new var.

	* opt/specialize (kBnd): be more conservative with nvars (it's too
	  conservative, now).

	* opt/fixfix.sml (curry): fixed bug when uncurrying cooked functions.

	* opt/fcontract.sml (fcFun):  fix bug when undertaking mut-rec functions.

	* main/flintcomp.sml:  added `recover' to help debugging.
	updated the fold to allow extraction of Fi and return it at the end.

	* lsplit/ls-inline.sml (oneBranch): fixed the wrapper function.

	* flint/flintutil.sml (freevars):  forgot to count the arg of SWITCH.

	* flint/flint.sig:  added a tfkind to TFN (only inlining for now).

	* main/control.sml: new file. Moved from TopLevel/viscomp/control.sml

1999-03-04  Stefan Monnier  <monnier@cs.yale.edu>

	* kernel/ltyextern.sml (tnarrow), reps/{reify,rttype,typeoper}.sml:
	  flatten arguments when reifying them since the pretty-printer doesn't
	  know how to deal with flattened reified TFNs.

1999-03-02  Stefan Monnier  <monnier@cs.yale.edu>

	* kernel/ltyextern.sml (tnarrow), reps/{reify,rttype,typeoper}.sml:
	  don't unflatten arguments when reifying them.

1999-02-28  Stefan Monnier  <monnier@cs.yale.edu>

	* opt/fcontract.sml (fcEta): do the known->unknown eta-reduce if the
	  `known' function is not locally defined (in which case the known/unknown
	  distinction is pointless anyway).
	(wrap):  don't forget to junk dead inlinable functions.

1999-02-26  Stefan Monnier  <monnier@cs.yale.edu>

	* opt/split.sml: seriously reworked.  Now splits TFNs as well.

1999-02-25  Stefan Monnier  <monnier@cs.yale.edu>

	* kernel/primop.sml (effect): removed DEREF and MAKEREF from the pure
	  primops.

1999-02-24  Stefan Monnier  <monnier@cs.yale.edu>
